@@ -1235,9 +1235,10 @@
 #define DMAPDATASUBINITD			1161
 #define MODULEGETINT				1162
 #define MODULEGETSTR				1163
+#define NPCORIGINALHP				1164
 
 
-#define LAST_BYTECODE 		1164
+#define LAST_BYTECODE 		1165
 
 //} END OF BYTECODE
 
